--- a/mysite/polls/templates/polls/detail.html
+++ b/mysite/polls/templates/polls/detail.html
@@ -1,9 +1,27 @@
 <body>
     <h1>{{ question.question_text }}</h1>
-    <ul>
+    <!-- <ul>
     {% for choice in question.choice_set.all %}
         <li>{{ choice.choice_text }}</li>
     {% endfor %}
-    </ul>
+    </ul> -->
+    {% if question.choice_set.all %}
+    <form action="{% url 'polls:vote' question.id %}" method="post">
+        {% csrf_token %}
+        <fieldset>
+            {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+            {% for choice in question.choice_set.all %}
+                <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+                <label for="choice{{ choice.id }}">
+                    {{ choice.choice_text }}
+                </label>
+                <br>
+            {% endfor %}
+        </fieldset>
+        <input type="submit" value="Vote">
+    </form>
+    {% else %}
+        <p>No current available choices for this question</p>
+    {% endif %}
     <a href="/polls">Return to index</a>
 </body>
