--- a/mysite/mysite/templates/mysite/index.html
+++ b/mysite/mysite/templates/mysite/index.html
@@ -1,3 +1,8 @@
+<!-- 
+{% load static %}
+
+<link rel="stylesheet" href="{% static 'polls/style.css' %}"> -->
+
 <body>
     <h1>Welcome to my first Django site!</h1>
     <ul>
